// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repo/Details Long Details smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis nisl eget turpis congue molestie. Nulla vitae purus nec augue accumsan facilisis sed sed ligula. Vestibulum sed risus lacinia risus lacinia molestie. Ut lorem quam, consequat eget tempus in, rhoncus vel nunc. Duis efficitur a leo vel sodales. Nam id fermentum lacus. Etiam nec placerat velit. Praesent ac consectetur est. Aenean iaculis commodo enim.
 Lorem ipsum dolor sit amet, con...
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="carole"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        carole
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="bob"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        bob
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="steve"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        steve
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details Long and No Spaces smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    LoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsum
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="carole"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        carole
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="bob"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        bob
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="steve"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        steve
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Description smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <div>
  </div>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="carole"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        carole
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="bob"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        bob
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="steve"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        steve
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Git Server smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <div>
    </div>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="carole"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        carole
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="bob"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        bob
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="steve"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        steve
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Maintainers or Relays smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <div>
    </div>
  </div>
  <div>
    <div>
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Maintainers smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Name or Description smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <div>
  </div>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="carole"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        carole
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="bob"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        bob
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="steve"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        steve
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Relays smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="carole"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        carole
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="bob"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        bob
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="steve"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        steve
      </div>
    </div>
  </div>
  <div>
    <div>
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Tags smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    short description
  </p>
  <div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="carole"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        carole
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="bob"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        bob
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="steve"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        steve
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details One Maintainer's Profile Has No displayName or Name smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="carole"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        carole
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded bg-neutral">
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        npub18669...
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="steve"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        steve
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details One Maintainer's Profile Not Loaded smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="carole"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        carole
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded skeleton">
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        <div class="w-24 h-4 skeleton">
        </div>
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="steve"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        steve
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details One Maintainer's Profile Only Has displayName But No Name smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="carole"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        carole
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="DanConwayDev"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        DanConwayDev
      </div>
    </div>
    <div class="flex my-2">
      <div class="avatar flex-none">
        <div class="w-8 h-8 rounded">
          <img class="my-0"
               src="../test-profile-image.jpg"
               alt="steve"
          >
        </div>
      </div>
      <div class="flex-auto pl-3 m-auto">
        steve
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details Short Details smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <h4>
    description
  </h4>
  <p class="text-sm my-2 break-words">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary break-words my-2"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary block my-2">
      relay.damus.io
    </div>
    <div class="badge badge-secondary block my-2">
      relay.snort.social
    </div>
    <div class="badge badge-secondary block my-2">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details loading smoke-test 1`] = `
<div class="max-w-md prose w-full">
  <div class="h-5 my-3 skeleton w-20">
  </div>
  <div class="h-4 my-2 skeleton">
  </div>
  <div class="h-4 my-2 mb-3 w-2/3 skeleton">
  </div>
  <div>
    <div class="badge skeleton w-20">
    </div>
    <div class="badge skeleton w-20">
    </div>
  </div>
  <div>
    <div class="h-5 my-3 skeleton w-20">
    </div>
    <div class="badge skeleton my-2 w-60 block">
    </div>
  </div>
  <div>
    <div class="h-5 my-3 skeleton w-20">
    </div>
    <div class="badge skeleton my-2 w-60 block">
    </div>
    <div class="badge skeleton my-2 w-40 block">
    </div>
  </div>
  <div>
    <div class="h-5 my-3 skeleton w-20">
    </div>
    <div class="badge skeleton my-2 w-60 block">
    </div>
    <div class="badge skeleton my-2 w-40 block">
    </div>
  </div>
</div>
`;
